[package]
name = "timealarms"
version = "0.4.4"
edition.workspace = true
authors.workspace = true
license.workspace = true

[[package.metadata.cargo-each.combinations]]
groups = ["build", "@agnostic"]
always-on = ["contract"]
include-rest = false

[[package.metadata.cargo-each.combinations]]
groups = ["ci", "@agnostic"]
sets = ["contract-and-stub"]
include-rest = true

[package.metadata.cargo-each.sets.contract-and-stub]
members = ["contract", "stub"]
at-least-one = false
mutually-exclusive = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
contract = ["stub", "dep:cosmwasm-std", "dep:versioning"]
stub = []
testing = []

[dependencies]
platform = { workspace = true }
sdk = { workspace = true, features = ["contract"] }
time-oracle = { workspace = true }
versioning = { workspace = true, optional = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true, optional = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
platform = { workspace = true, features = ["testing"] }
schema = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { workspace = true, features = ["cosmos", "storage", "testing"] }
