lints = { workspace = true }

[package]
name = "lease"
version = "0.9.8"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "$dex"], always-on = ["contract", "$dex"], include-rest = false, generics = { "$dex" = "dex" } },
    { tags = ["ci", "$dex"], always-on = ["contract", "$dex"], feature-groups = ["testing"], include-rest = false, generics = { "$dex" = "dex" } },
    { tags = ["ci", "@agnostic"], feature-groups = ["skel", "testing"], include-rest = false },
]
feature-groups = { dex = { members = ["dex-astroport_main", "dex-astroport_test", "dex-osmosis"], at-least-one = true, mutually-exclusive = true }, skel = { members = ["skel"], at-least-one = false, mutually-exclusive = false }, testing = { members = ["testing"], at-least-one = false, mutually-exclusive = false } }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
dex-astroport_main = ["contract", "swap/dex-astroport_main"]
dex-astroport_test = ["contract", "swap/dex-astroport_test"]
dex-osmosis = ["contract", "swap/dex-osmosis"]

contract = [
    "dep:cosmwasm-std",
    "dep:enum_dispatch",
    "skel",
    "sdk/contract",
    "dep:swap",
    "dep:versioning",
]
skel = [
    "dep:access-control",
    "dep:lpp",
    "dep:oracle",
    "dep:oracle-platform",
    "dep:platform",
    "dep:profit",
    "dep:reserve",
    "dep:timealarms",
    "dep:thiserror",
]
testing = [
    "currencies/testing",
    "currency/testing",
    "finance/testing",
    "dep:lpp",
    "lpp/testing",
    "dep:profit",
    "profit/testing",
]

[dependencies]
profit = { workspace = true, optional = true, features = ["stub"] }
reserve = { workspace = true, optional = true, features = ["stub"] }
timealarms = { workspace = true, optional = true, features = ["stub"] }

access-control = { workspace = true, optional = true }
currencies = { workspace = true }
currency = { workspace = true }
dex = { workspace = true, features = ["impl", "migration"] }
finance = { workspace = true }
lpp = { workspace = true, optional = true, features = ["stub"] }
oracle = { workspace = true, optional = true, features = ["stub_alarms", "stub_price"] }
oracle-platform = { workspace = true, optional = true }
platform = { workspace = true, optional = true }
sdk = { workspace = true }
swap = { workspace = true, optional = true }
versioning = { workspace = true, optional = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true, optional = true }

enum_dispatch = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
timealarms = { workspace = true, features = ["testing"] }
lpp = { workspace = true, features = ["testing"] }
profit = { workspace = true, features = ["testing"] }
oracle = { workspace = true, features = ["testing"] }
oracle-platform = { workspace = true, features = ["testing"] }
finance = { workspace = true, features = ["testing"] }
currencies = { workspace = true, features = ["testing"] }
currency = { workspace = true, features = ["testing"] }
platform = { workspace = true, features = ["testing"] }
schema = { workspace = true }
sdk = { workspace = true, features = ["testing"] }
