lints = { workspace = true }

[package]
name = "profit"
version = "0.6.6"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "$dex"], always-on = ["contract", "$dex"], include-rest = false, generics = { "$dex" = "dex" } },
    { tags = ["ci", "$dex"], always-on = ["contract", "$dex"], feature-groups = ["testing"], include-rest = false, generics = { "$dex" = "dex" } },
    { tags = ["ci", "@agnostic"], feature-groups = ["contract-or-stub", "testing"], include-rest = false },
]
feature-groups = { dex = { members = ["dex-astroport_main", "dex-astroport_test", "dex-osmosis"], at-least-one = true, mutually-exclusive = true }, contract-or-stub = { members = ["contract", "stub"], at-least-one = false, mutually-exclusive = true }, testing = { members = ["testing"], at-least-one = false, mutually-exclusive = false } }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
dex-astroport_main = [
    "contract",
    "swap/dex-astroport_main",
]
dex-astroport_test = [
    "contract",
    "swap/dex-astroport_test",
]
dex-osmosis = [
    "contract",
    "swap/dex-osmosis",
]

contract = [
    "sdk/contract",
    "dep:access-control",
    "dep:cosmwasm-std",
    "dep:currencies",
    "dep:currency",
    "dex/impl",
    "dep:finance",
    "dep:oracle",
    "dep:oracle-platform",
    "dep:platform",
    "dep:swap",
    "dep:timealarms",
    "dep:thiserror",
    "dep:versioning",
]
stub = [
    "dep:platform",
    "dep:thiserror",
]
testing = []

[dependencies]
access-control = { workspace = true, optional = true }
currencies = { workspace = true, optional = true }
currency = { workspace = true, optional = true }
dex = { workspace = true }
finance = { workspace = true, optional = true }
oracle = { workspace = true, optional = true }
oracle-platform = { workspace = true, optional = true }
platform = { workspace = true, optional = true }
sdk = { workspace = true }
swap = { workspace = true, optional = true }
timealarms = { workspace = true, optional = true, features = ["stub"] }
versioning = { workspace = true, optional = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true, optional = true }

thiserror = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
currencies = { workspace = true, features = ["testing"] }
currency = { workspace = true, features = ["testing"] }
dex = { workspace = true, features = ["testing"] }
finance = { workspace = true }
oracle = { workspace = true, features = ["testing"] }
oracle-platform = { workspace = true, features = ["testing"] }
timealarms = { workspace = true, features = ["testing"] }
schema = { workspace = true }
sdk = { workspace = true, features = ["testing"] }
swap = { workspace = true, features = ["testing"] }
